--- a/assets/css/less/ft-inner.less
+++ b/assets/css/less/ft-inner.less
@@ -3,13 +3,6 @@
 //
 // Inner
 // --------------------------------------------------
-.site-inner {
-  .row {
-    .box-padding(45, 0, 45, 0);
-    border-top: 1px solid #eeeeee;
-  }
-  .clearfix();
-}
 
 .widget {
   h4 {
