--- a/assets/css/less/ft-layouts.less
+++ b/assets/css/less/ft-layouts.less
@@ -10,7 +10,6 @@
 }
 
 .content-sidebar-wrap {
-  .make-row;
   padding-bottom: 40px;
   min-height: 100%;
   overflow: hidden;
@@ -57,13 +56,11 @@
 
 .content-sidebar {
   .content {
-    padding-right: 30px;
-    padding-left: 15px;
+    padding-right: @grid-gutter-width;
   }
 
   .sidebar-primary {
-    padding-right: 15px;
-    padding-left: 30px;
+    padding-left: @grid-gutter-width;
     border-left: 1px solid #e8e8e8;
   }
 }
